--- a/BisitaPilipinas/CSS/sidebars.css
+++ b/BisitaPilipinas/CSS/sidebars.css
@@ -1,89 +1,185 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Poppins", sans-serif;
+}
+body{
+  position: relative;
   min-height: 100vh;
-  min-height: -webkit-fill-available;
+  width: 100%;
+  overflow: hidden;
 }
 
-html {
-  height: -webkit-fill-available;
-}
+.sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 240px;
+  background: #11101d;
+  padding: 6px 14px;
 
-main {
+}
+.sidebar .logo_content .logo{
+  color: #fff;
   display: flex;
-  flex-wrap: nowrap;
-  height: 100vh;
-  height: -webkit-fill-available;
-  max-height: 100vh;
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
-.b-example-divider {
-  flex-shrink: 0;
-  width: 1.5rem;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
-.bi {
-  vertical-align: -.125em;
-  pointer-events: none;
-  fill: currentColor;
-}
-
-.dropdown-toggle { outline: 0; }
-
-.nav-flush .nav-link {
-  border-radius: 0;
-}
-
-.btn-toggle {
-  display: inline-flex;
+  height: 50px;
+  width: 100%;
   align-items: center;
-  padding: .25rem .5rem;
-  font-weight: 600;
-  color: rgba(0, 0, 0, .65);
-  background-color: transparent;
-  border: 0;
-}
-.btn-toggle:hover,
-.btn-toggle:focus {
-  color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
 }
 
-.btn-toggle::before {
-  width: 1.25em;
-  line-height: 0;
-  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-  transition: transform .35s ease;
-  transform-origin: .5em 50%;
+.logo_content .logo i{
+font-size: 28px;
+margin-right: 5px;
 }
 
-.btn-toggle[aria-expanded="true"] {
-  color: rgba(0, 0, 0, .85);
+.logo_content .logo .logo_name{
+  font-size: 20px;
+  font-weight: 400;
 }
-.btn-toggle[aria-expanded="true"]::before {
-  transform: rotate(90deg);
+.sidebar #btn{
+  position: absolute;
+  color: #fff;
+  left: 90%;
+  top: 6px;
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  transform: translateX(-50%);
 }
 
-.btn-toggle-nav a {
-  display: inline-flex;
-  padding: .1875rem .5rem;
-  margin-top: .125rem;
-  margin-left: 1.25rem;
+.sidebar ul{
+  margin-top: 20px;
+  text-align: left;
+}
+.sidebar ul li {
+  position: relative;
+  height: 50px;
+  width: 100%;
+  margin: 0 5px;
+  list-style: none;
+  line-height: 50px;
+}
+.sidebar ul li .tooltip{
+  position: absolute;
+  left: 122px;
+  top: 0;
+  transform: translateY(-50%);
+  border-radius: 6px;
+  height: 35px;
+  width: 122px;
+  background: #fff;
+  line-height: 35px;
+  text-align: center;
+  box-shadow: 0 5px 10px #fff;
+  transition: 0s;
+  opacity: 0;
+  pointer-events: none;
+}
+.sidebar ul li:hover .tooltip{
+  transition: all 0.5 ease;
+  opacity: 1;
+  top: 50%;
+}
+.sidebar ul li input{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 12px;
+  outline: none;
+  border: none;
+  background: #1d1b31;
+  padding-left: 50px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.sidebar ul li .bx-search{
+position: absolute;
+z-index: 99;
+color: #fff;
+padding-top: 27px;
+font-size: 22px;
+}
+.sidebar ul li a{
+  color: #fff;
+  display: flex;
+  align-items: center ;
   text-decoration: none;
+  transition: all 0.4 ease;
+  border-radius: 12px;
 }
-.btn-toggle-nav a:hover,
-.btn-toggle-nav a:focus {
-  background-color: #d2f4ea;
-}
-
-.scrollarea {
-  overflow-y: auto;
+.sidebar ul li a:hover{
+  color: #11101d;
+  background: #fff;
 }
 
-.fw-semibold { font-weight: 600; }
-.lh-tight { line-height: 1.25; }
+.sidebar ul li a i{
+  height: 50px;
+  min-width: 50px;
+  border-radius: 12px;
+  line-height: 50px;
+  text-align: center;
+}
+
+.sidebar .profile_content{
+  position: absolute;
+  color: #fff;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.sidebar .profile_content .profile{
+position: relative;
+padding: 10px 6px;
+height: 60px;
+background: #11101d;
+
+}
+.profile_content .profile .profile_details{
+display: flex;
+align-items: center;
+}
+
+.profile_content .profile .profile_details img{
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.profile .profile_details .name_job{
+  margin-left: 10px;
+
+}
+.profile .profile_details .name{
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.profile .profile_details .job{
+  font-size: 12px;
+}
+.profile #log-out{
+  position: absolute;
+  left: 88%;
+  bottom: 5px;
+  transform: translateX(-50%);
+  min-height: 50px;
+  line-height: 50px;
+}
+
+.home_content{
+  position: absolute;
+  height: 100%;
+  width: calc(100% - 240px);
+  left: 240px;
+}
+
