--- a/BisitaPilipinas/CSS/sidebars.css
+++ b/BisitaPilipinas/CSS/sidebars.css
@@ -17,10 +17,14 @@ body{
   top: 0;
   left: 0;
   height: 100%;
-  width: 240px;
+  width: 78px;
   background: #11101d;
   padding: 6px 14px;
+  transition: all 0.5s ease;
 
+}
+.sidebar.active{
+  width: 240px;
 }
 .sidebar .logo_content .logo{
   color: #fff;
@@ -28,8 +32,13 @@ body{
   height: 50px;
   width: 100%;
   align-items: center;
+  opacity: 0;
+  pointer-events: none;
 }
-
+.sidebar.active .logo_content .logo{
+  opacity: 1;
+  pointer-events: none;
+}
 .logo_content .logo i{
 font-size: 28px;
 margin-right: 5px;
@@ -42,7 +51,7 @@ margin-right: 5px;
 .sidebar #btn{
   position: absolute;
   color: #fff;
-  left: 90%;
+  left: 50%;
   top: 6px;
   font-size: 20px;
   height: 50px;
@@ -50,6 +59,9 @@ margin-right: 5px;
   text-align: center;
   line-height: 50px;
   transform: translateX(-50%);
+}
+.sidebar.sidebar.active #btn{
+  left: 90%;
 }
 
 .sidebar ul{
@@ -75,15 +87,26 @@ margin-right: 5px;
   background: #fff;
   line-height: 35px;
   text-align: center;
-  box-shadow: 0 5px 10px #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transition: 0s;
   opacity: 0;
   pointer-events: none;
+  display: block;
+}
+.sidebar.active ul li .tooltip{
+  display: none;
 }
 .sidebar ul li:hover .tooltip{
   transition: all 0.5 ease;
   opacity: 1;
   top: 50%;
+}
+.sidebar ul li i{
+  height: 50px;
+  min-width: 50px;
+  border-radius: 12px;
+  line-height: 50px;
+  text-align: center;
 }
 .sidebar ul li input{
   position: absolute;
@@ -104,8 +127,12 @@ margin-right: 5px;
 position: absolute;
 z-index: 99;
 color: #fff;
-padding-top: 27px;
 font-size: 22px;
+transition: all 0.5 s;
+}
+.sidebar ul li .bx-search:hover{
+  background: #fff;
+  color: #1d1b31;
 }
 .sidebar ul li a{
   color: #fff;
