Added new pages
Added new pages and new css lines

--- a/BisitaPilipinas/CSS/Index.css
+++ b/BisitaPilipinas/CSS/Index.css
@@ -16,6 +16,11 @@
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
+  padding-left: -10%;
+
+}
+.sidebar ol, ul{
+  padding-left: 0rem;
 }
 .sidebar.open{
   width: 250px;
@@ -243,6 +248,7 @@
   font-weight: 500;
   margin: 18px
 }
+
 @media (max-width: 420px) {
   .sidebar li .tooltip{
     display: none;
