--- a/BisitaPilipinas/CSS/Index.css
+++ b/BisitaPilipinas/CSS/Index.css
@@ -256,7 +256,7 @@
 }
 
 .fakeimg {
-  height: 200px;
+  height: 300px;
   background: #aaa;
 }
 
@@ -286,3 +286,15 @@
   padding: 10px;
 }
 
+.homepageColumn {
+  float: left;
+  padding: 15px;
+  margin:3px;
+}
+
+/* Clearfix (clear floats) */
+.homepage_row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
