--- a/bisita-pilipinas/CSS/card.css
+++ b/bisita-pilipinas/CSS/card.css
@@ -1,7 +1,7 @@
 /* From uiverse.io by @alexruix */
 .card {
-    height: 254px;
-    width: 190px;
+    max-width: 540px;
+    max-height: 540px;
     position: relative;
     transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
     border-radius: 1em;
@@ -20,12 +20,13 @@
    }
    
    /*Description */
-   .card-description {
+   .p .card-description {
     display: flex;
     position: absolute;
     gap: 1em;
     flex-direction: column;
     background-color: #f5f5f5;
+    width: 540px;
     height: 70%;
     bottom: 0;
     border-radius: 1em 1em 0 0;
