--- a/BisitaPilipinas/CSS/Index.css
+++ b/BisitaPilipinas/CSS/Index.css
@@ -229,7 +229,7 @@
 }
 .home-section{
   position: relative;
-  background: #fff;
+  background: #E4E9F7;
   min-height: 100vh;
   top: 0;
   left: 78px;
@@ -260,16 +260,14 @@
   background: #aaa;
 }
 
-.home-section {
-  padding: 15px;
-  width: 100%;
-  height: 100%;
+.home-section{
+  padding-left: 25px;
+  padding-top: 10px;
 }
-.home-section .container{
+.home-section .col-sm-8{
   margin: 25px 50px 75px ;
   margin-right: 10%;
   position: absolute;
- 
 }
 
 .col-sm-8 #accordionExample1{
@@ -291,17 +289,12 @@
 .homepageColumn {
   float: left;
   padding: 15px;
+  margin:3px;
 }
 
 /* Clearfix (clear floats) */
-.homepagerRow::after {
+.homepage_row::after {
   content: "";
   clear: both;
   display: table;
 }
-
-.home-section .container .marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
-}
-
